--- a/2.html
+++ b/2.html
@@ -8,6 +8,7 @@
 <body>
 <h1><a href="index.html"title="홈으로">우리집 겸둥이</a></h1><p style="margin-top:40px;">
 
-<video>
-  <source src="https://youtu.be/To5CKN5LAwU" type="video/mkv">
-</video>
+<p>
+<iframe width="1280"height="720"src="https://youtube.com/embed/To5CKN5LAwU"frameborder="0"allowfullscreen>
+</iframe>
+</p>
